# cesizen_api

./: API_ENDPOINTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.prod  Dockerfile.staging  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd-prod.yml  cd-staging.yml  ci.yml
migrations/: 001_create_tables.sql  002_seed_data.sql  003_create_documents.sql  004_seed_documents.sql  005_articles_s3.sql  006_user_cascade_delete.sql  007_seed_articles_tracker.sql  008_user_deactivation_date.sql  009_seed_demo_deactivated.sql
seeds/articles/: article-1.json  article-2.json  article-3.json  article-4.json  article-5.json  article-6.json
seeds/documents/: charte-bien-etre.md  echelle-holmes-rahe.md  guide-respiration.md
src/: config.rs  errors.rs  lib.rs  main.rs  storage.rs
src/handlers/: admin.rs  auth.rs  document.rs  emotion.rs  health.rs  information.rs  mod.rs  tracker.rs  user.rs
src/middleware/: auth.rs
src/models/: document.rs  emotion.rs  information.rs  mod.rs  tracker.rs  user.rs
tests/: admin_tests.rs  auth_tests.rs  health_tests.rs  tracker_tests.rs
tests/common/: mod.rs
