[package]
name = "cesizen-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
actix-governor = "0.10.0"
actix-multipart = "0.7"
futures-util = "0.3"
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"

[dev-dependencies]
testcontainers-modules = { version = "0.12", features = ["postgres"] }
